objects/SFDocumentor__Object_Collection__c.object
<CustomObject>
    <description>Collection Of All Objects available in current Org</description>
    <fields>
        <fullName>SFDocumentor__CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Collection_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__CreatedDate__c</fullName>
        <label>Object Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__DefaultImplementation__c</fullName>
        <label>Default Implementation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Deployment_Status__c</fullName>
        <label>Deployment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__DeveloperName__c</fullName>
        <externalId>true</externalId>
        <label>Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__DurableId__c</fullName>
        <label>DurableId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__HelpSettingPageName__c</fullName>
        <label>HelpSetting Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__ImplementedBy__c</fullName>
        <label>Implemented By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__KeyPrefix__c</fullName>
        <label>Key Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__LastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Collection_Objects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__LastModifiedDate__c</fullName>
        <label>Object Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Last_Sync_Date__c</fullName>
        <label>Last SFDoc Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Link1__c</fullName>
        <formula>HYPERLINK(SFDocumentor__Link__c , Name,&quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Setup Link/URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__MasterLabel__c</fullName>
        <label>Master Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__NamespacePrefix__c</fullName>
        <label>Namespace Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Object_Api_Name__c</fullName>
        <description>Api key Name</description>
        <externalId>true</externalId>
        <label>Object Api Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Object_Id__c</fullName>
        <label>Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Object_Type__c</fullName>
        <description>Standard/custom</description>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Publisher_ID__c</fullName>
        <label>Publisher ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__SFDocumentorDesc__c</fullName>
        <label>SFDoc Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SFDocumentor__Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDocumentor__Total_Buttons__c</fullName>
        <label>Total Buttons</label>
        <summaryForeignKey>SFDocumentor__Button_Collection__c.SFDocumentor__Object_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Total_Fields__c</fullName>
        <label>Total Fields</label>
        <summaryForeignKey>SFDocumentor__Field_Collection__c.SFDocumentor__Object_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Total_Layouts__c</fullName>
        <label>Total Layouts</label>
        <summaryForeignKey>SFDocumentor__Layout_collection__c.SFDocumentor__Object_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Total_RecordTypes__c</fullName>
        <label>Total Record Types</label>
        <summaryForeignKey>SFDocumentor__Record_Type_Collection__c.SFDocumentor__Object_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Total_Records__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Total_Triggers__c</fullName>
        <label>Total Triggers</label>
        <summaryForeignKey>SFDocumentor__Apex_Trigger__c.SFDocumentor__Object_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Total_ValidationRules__c</fullName>
        <label>Total Validation Rules</label>
        <summaryForeignKey>SFDocumentor__Validation_Rules_Collection__c.SFDocumentor__Object_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Used_In_Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used In Apex</label>
        <type>Checkbox</type>
    </fields>
    <label>Object Collection</label>
    <listViews>
        <fullName>SFDocumentor__All</fullName>
        <columns>NAME</columns>
        <columns>SFDocumentor__Object_Api_Name__c</columns>
        <columns>SFDocumentor__Object_Type__c</columns>
        <columns>SFDocumentor__SFDocumentorDesc__c</columns>
        <columns>SFDocumentor__Description__c</columns>
        <columns>SFDocumentor__Status__c</columns>
        <columns>SFDocumentor__Total_Records__c</columns>
        <columns>SFDocumentor__Total_Fields__c</columns>
        <columns>SFDocumentor__Total_Triggers__c</columns>
        <columns>SFDocumentor__Total_Buttons__c</columns>
        <columns>SFDocumentor__Total_ValidationRules__c</columns>
        <columns>SFDocumentor__Total_Layouts__c</columns>
        <columns>SFDocumentor__Total_RecordTypes__c</columns>
        <columns>SFDocumentor__DeveloperName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SFDocumentor__All_Custom_Objects</fullName>
        <columns>NAME</columns>
        <columns>SFDocumentor__Object_Type__c</columns>
        <columns>SFDocumentor__Description__c</columns>
        <columns>SFDocumentor__Status__c</columns>
        <columns>SFDocumentor__Total_Records__c</columns>
        <columns>SFDocumentor__Total_Fields__c</columns>
        <columns>SFDocumentor__Total_Triggers__c</columns>
        <columns>SFDocumentor__Total_Buttons__c</columns>
        <columns>SFDocumentor__Total_ValidationRules__c</columns>
        <columns>SFDocumentor__Total_Layouts__c</columns>
        <columns>SFDocumentor__Total_RecordTypes__c</columns>
        <columns>SFDocumentor__DeveloperName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFDocumentor__Object_Type__c</field>
            <operation>equals</operation>
            <value>Custom Object</value>
        </filters>
        <label>All Custom Objects</label>
    </listViews>
    <listViews>
        <fullName>SFDocumentor__All_Standard_Objects</fullName>
        <columns>NAME</columns>
        <columns>SFDocumentor__Object_Type__c</columns>
        <columns>SFDocumentor__Description__c</columns>
        <columns>SFDocumentor__Status__c</columns>
        <columns>SFDocumentor__Total_Records__c</columns>
        <columns>SFDocumentor__Total_Fields__c</columns>
        <columns>SFDocumentor__Total_Triggers__c</columns>
        <columns>SFDocumentor__Total_Buttons__c</columns>
        <columns>SFDocumentor__Total_ValidationRules__c</columns>
        <columns>SFDocumentor__Total_Layouts__c</columns>
        <columns>SFDocumentor__Total_RecordTypes__c</columns>
        <columns>SFDocumentor__DeveloperName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Standard Objects</label>
    </listViews>
    <listViews>
        <fullName>SFDocumentor__All_Unused_Objects</fullName>
        <columns>NAME</columns>
        <columns>SFDocumentor__Object_Type__c</columns>
        <columns>SFDocumentor__Description__c</columns>
        <columns>SFDocumentor__Status__c</columns>
        <columns>SFDocumentor__Total_Records__c</columns>
        <columns>SFDocumentor__Total_Fields__c</columns>
        <columns>SFDocumentor__Total_Triggers__c</columns>
        <columns>SFDocumentor__Total_Buttons__c</columns>
        <columns>SFDocumentor__Total_ValidationRules__c</columns>
        <columns>SFDocumentor__Total_Layouts__c</columns>
        <columns>SFDocumentor__Total_RecordTypes__c</columns>
        <columns>SFDocumentor__DeveloperName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFDocumentor__Status__c</field>
            <operation>equals</operation>
            <value>Unused</value>
        </filters>
        <label>All Unused Objects</label>
    </listViews>
    <listViews>
        <fullName>SFDocumentor__All_Used_Objects</fullName>
        <columns>NAME</columns>
        <columns>SFDocumentor__Object_Type__c</columns>
        <columns>SFDocumentor__Description__c</columns>
        <columns>SFDocumentor__Status__c</columns>
        <columns>SFDocumentor__Total_Records__c</columns>
        <columns>SFDocumentor__Total_Fields__c</columns>
        <columns>SFDocumentor__Total_Triggers__c</columns>
        <columns>SFDocumentor__Total_Buttons__c</columns>
        <columns>SFDocumentor__Total_ValidationRules__c</columns>
        <columns>SFDocumentor__Total_Layouts__c</columns>
        <columns>SFDocumentor__Total_RecordTypes__c</columns>
        <columns>SFDocumentor__DeveloperName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFDocumentor__Status__c</field>
            <operation>equals</operation>
            <value>Used</value>
        </filters>
        <label>All Used Objects</label>
    </listViews>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>